--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     <main>
         <div class="icons">
             <div class="set">
-                <i id="bold" class="fa-sharp fa-solid fa-bold icon"></i>
-                <i id="italic" class="fa-solid fa-italic icon"></i>
-                <i id="underline" class="fa-solid fa-underline icon"></i>
+                <i id="bold" title="Bold" class="fa-sharp fa-solid fa-bold icon"></i>
+                <i id="italic" title="Italic" class="fa-solid fa-italic icon"></i>
+                <i id="underline" title="Underline" class="fa-solid fa-underline icon"></i>
             </div>
             <div class="set">
-                <i id="aling-left" class="fa-solid fa-align-left icon"></i>
-                <i id="aling-center" class="fa-solid fa-align-center icon"></i>
-                <i id="aling-right" class="fa-solid fa-align-right icon"></i>
-                <i id="aling-justify" class="fa-solid fa-align-justify icon"></i>
+                <i id="aling-left" title="Left Align" class="fa-solid fa-align-left icon"></i>
+                <i id="aling-center" title="Center Align" class="fa-solid fa-align-center icon"></i>
+                <i id="aling-right" title="Right Align" class="fa-solid fa-align-right icon"></i>
+                <i id="aling-justify" title="Justify" class="fa-solid fa-align-justify icon"></i>
             </div>
             <div class="set">
-                <i class="fa-solid fa-copy icon"></i>
-                <i class="fa-solid fa-xmark icon"></i>
+                <i id="copy" title="Copy Text" class="fa-solid fa-copy icon"></i>
+                <i id="reset" title="Clear" class="fa-solid fa-xmark icon"></i>
             </div>
         </div>
         <textarea></textarea>
