--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
                 <i id="underline" title="Underline" class="fa-solid fa-underline icon"></i>
             </div>
             <div class="set">
-                <i id="aling-left" title="Left Align" class="fa-solid fa-align-left icon"></i>
-                <i id="aling-center" title="Center Align" class="fa-solid fa-align-center icon"></i>
-                <i id="aling-right" title="Right Align" class="fa-solid fa-align-right icon"></i>
-                <i id="aling-justify" title="Justify" class="fa-solid fa-align-justify icon"></i>
+                <i id="align-left" title="Left Align" class="fa-solid fa-align-left icon"></i>
+                <i id="align-center" title="Center Align" class="fa-solid fa-align-center icon"></i>
+                <i id="align-right" title="Right Align" class="fa-solid fa-align-right icon"></i>
+                <i id="align-justify" title="Justify" class="fa-solid fa-align-justify icon"></i>
             </div>
             <div class="set">
                 <i id="copy" title="Copy Text" class="fa-solid fa-copy icon"></i>
                 <i id="reset" title="Clear" class="fa-solid fa-xmark icon"></i>
             </div>
         </div>
-        <textarea></textarea>
+        <textarea id="text"></textarea>
     </main>
     <script src="script.js"></script>
 </body>
