--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
                 <i id="reset" title="Clear" class="fa-solid fa-xmark icon"></i>
             </div>
         </div>
+        <div class="icons">
+            <div class="set">
+                <p class="font">Font Size</p>
+                <input type="number" name="" id="font-size" value="16">
+            </div>
+            <input type="color" id="color" name="" value="#000" class="color">
+        </div>
         <textarea id="text"></textarea>
     </main>
     <script src="script.js"></script>
